<resources>
    <string name="a10_permission_toast">Android 10+ unable to read and write file due to permission restrictions</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About Us</string>
    <string name="about_description">　　 This is an open source reading software newly developed by Kotlin, welcome to join us. Follow the WeChat Official Account [开源阅读]！</string>
    <string name="about_official_account">Official Accounts[开源阅读]</string>
    <string name="about_summary">Wechat official account [开源阅读软件]</string>
    <string name="accent">Accent</string>
    <string name="accent_background_diff">Need Difference between accent and background color</string>
    <string name="accent_text_diff">Need Difference between accent and text color</string>
    <string name="action_del">Delete</string>
    <string name="action_download">Download</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="add">Add</string>
    <string name="add_book_source">Add Book source</string>
    <string name="add_book_url">Add book url</string>
    <string name="add_group">Add to Groups</string>
    <string name="add_replace_rule">New replacement</string>
    <string name="add_rss_source">Add subscription source</string>
    <string name="add_to_group">Add to Group</string>
    <string name="add_to_shelf">Add to Bookshelf</string>
    <string name="add_to_text_context_menu_s">Long tap to display Legado·Search in the operation menu</string>
    <string name="add_to_text_context_menu_t">Text operation display Search</string>
    <string name="add_url">Add url</string>
    <string name="adjust">Adjust</string>
    <string name="after_add_bookshelf">Add this book to Bookshelf first</string>
    <string name="alipay">AliPay</string>
    <string name="alipay_payment_qr_code">AliPay QR code</string>
    <string name="alipay_red_envelope_copy">537954522 Click to copy</string>
    <string name="alipay_red_envelope_qr_code">AliPay red envelope QR code</string>
    <string name="alipay_red_envelope_search_code">AliPay red envelope search code</string>
    <string name="all">All</string>
    <string name="all_ad_error">配置中的广告全部加载失败，或配置中没有匹配的广告</string>
    <string name="all_book">All</string>
    <string name="all_chapter_num">%d chapters</string>
    <string name="all_read_time">Total read time</string>
    <string name="all_source">All Sources</string>
    <string name="allow_update">Enable update</string>
    <string name="aloud_can_not_auto_page">Speech is running, cannot turn pages automatically</string>
    <string name="aloud_config">Speech settings</string>
    <string name="aloud_stop">Speak Stopped</string>
    <string name="alouding_disable">The selected text cannot be spoken in full text speech</string>
    <string name="already_in_download">This book is already in Download list</string>
    <string name="androidx_camera_default_config_provider">androidx.camera.camera2.Camera2Config$DefaultProvider</string>
    <string name="app_file_picker">App file picker</string>
    <string name="app_folder_picker">App folder picker</string>
    <string name="app_name">WenYuanPavilion</string>
    <string name="app_share_description">wenyuange download link： https://wwr.lanzoui.com/wenyuange</string>
    <string name="auto_clear_expired">Clear expired search histories automatically </string>
    <string name="auto_clear_expired_summary">Search histories more than one day</string>
    <string name="backup">Backup</string>
    <string name="backup_path">Backup to</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="backup_summary">Backup the local and WebDav simultaneously</string>
    <string name="book_info">Book information</string>
    <string name="book_page_anim">Flip animation (book)</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="bookmark_add">Add to Bookmarks</string>
    <string name="change_origin">Change Origin</string>
    <string name="check_update">Check for Updates</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">Clear the cache of the downloaded books and fonts</string>
    <string name="click_to_apply">Tap to join</string>
    <string name="contact">Contact</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_summary">gedoor,Invinciblelee etc. Checking in github for details</string>
    <string name="copy_text">Copy</string>
    <string name="crash_log">Crash log</string>
    <string name="default_cover">Default cover</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="discord_url">https://discord.gg/qDE52P5xGW</string>
    <string name="donate">Donations</string>
    <string name="donate_summary">Your donation makes this app better</string>
    <string name="follow_official_account">Follow WeChat Official Accounts</string>
    <string name="get_book_progress">Pull the cloud progress</string>
    <string name="git_hub">GitHub</string>
    <string name="high_brush_summary">Use maximum screen refresh rate</string>
    <string name="high_brush_title">High screen refresh rate</string>
    <string name="home_page">Home page</string>
    <string name="home_page_url">https://gedoor.github.io/MyBookshelf/</string>
    <string name="image_style">Style of Images</string>
    <string name="import_old_summary">Select a legacy backup folder</string>
    <string name="join_qq_group">Join QQ group</string>
    <string name="language">Language</string>
    <string name="license">License</string>
    <string name="main_activity">Start page</string>
    <string name="media_button_on_exit_summary">Headset buttons are available even exit the app.</string>
    <string name="media_button_on_exit_title">Headset buttons are always available</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="mkdirs">Create a subfolder</string>
    <string name="mkdirs_description">Create a folder named Legado as the backup folder.</string>
    <string name="official_account">开源阅读</string>
    <string name="offline_cache">Offline cache</string>
    <string name="other">Other</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="pre_download">Download in advance</string>
    <string name="pre_download_s">Download %s chapters in advance</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="ps_default_read">Use Bookshelf as start page</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="pt_default_read">Auto jump to Recent list</string>
    <string name="re_segment">Re-segment</string>
    <string name="read_aloud_by_page">Speak by pages</string>
    <string name="read_record">Read record</string>
    <string name="read_record_summary">Read record summary</string>
    <string name="record_log">Log</string>
    <string name="refresh">Refresh</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="replace_rule_title">Replacement</string>
    <string name="restore">Restore</string>
    <string name="restore_ignore">Bypass list</string>
    <string name="restore_ignore_summary">Ignore some contents while restoring</string>
    <string name="restore_summary">Restore from WebDAV first, Restore form the local backup on long click</string>
    <string name="reverse_content">Reverse content</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="send_mail">Email</string>
    <string name="set_charset">Text encoding</string>
    <string name="setting">Settings</string>
    <string name="share_app">Share to</string>
    <string name="source_rule_s">Source rules description</string>
    <string name="source_rule_url">https://alanskycn.gitee.io/teachme/</string>
    <string name="speak_engine">Speak Engine</string>
    <string name="sync_book_progress_s">Synchronize reading progress when entering / exiting the reading interface</string>
    <string name="sync_book_progress_t">Synchronous reading progress</string>
    <string name="tg_url">https://t.me/yueduguanfang</string>
    <string name="theme_mode">Theme mode</string>
    <string name="theme_mode_desc">Select a theme you want</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="this_github_url">https://github.com/gedoor/legado</string>
    <string name="threads_num_title">Number of concurrent tasks</string>
    <string name="txt_toc_regex">Txt Chapters Regex</string>
    <string name="update_log">What\'s new</string>
    <string name="update_toc">Update chapters</string>
    <string name="use_default_cover">Always show default cover</string>
    <string name="use_default_cover_s">Always show the default cover, do not show the network cover</string>
    <string name="version">Version upgrade</string>
    <string name="version_name">Version %s</string>
    <string name="web_dav_account">WebDav account</string>
    <string name="web_dav_account_s">Input your WebDav account</string>
    <string name="web_dav_pw">WebDav password</string>
    <string name="web_dav_pw_s">Input you WebDav authorized password</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="web_dav_set_import_old">WebDav settings/Import legacy data</string>
    <string name="web_dav_url">WebDav server address</string>
    <string name="web_dav_url_s">Input you server address</string>
    <string name="web_port_title">Web port</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
</resources>