<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/web_dav_set"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.ui.widget.prefs.EditTextPreference
            android:title="@string/web_dav_url"
            android:key="web_dav_url"
            android:summary="@string/web_dav_url_s"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.EditTextPreference
            android:title="@string/web_dav_account"
            android:key="web_dav_account"
            android:summary="@string/web_dav_account_s"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.EditTextPreference
            android:title="@string/web_dav_pw"
            android:key="web_dav_password"
            android:summary="@string/web_dav_pw_s"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/mkdirs"
            android:key="webDavCreateDir"
            android:summary="@string/mkdirs_description"
            android:defaultValue="true"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/sync_book_progress_t"
            android:key="syncBookProgress"
            android:summary="@string/sync_book_progress_s"
            android:defaultValue="true"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/backup_restore"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/backup_path"
            android:key="backupUri"
            android:summary="@string/select_backup_path"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/backup"
            android:key="web_dav_backup"
            android:summary="@string/backup_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/restore"
            android:key="web_dav_restore"
            android:summary="@string/restore_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/restore_ignore"
            android:key="restoreIgnore"
            android:summary="@string/restore_ignore_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/menu_import_old_version"
            android:key="import_old"
            android:summary="@string/import_old_summary"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
