<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.ui.widget.prefs.NameListPreference
        android:title="@string/language"
        android:key="language"
        android:defaultValue="auto"
        app:entries="@array/language"
        app:entryValues="@array/language_value"/>
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/main_activity"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/pt_auto_refresh"
            android:key="auto_refresh"
            android:summary="@string/ps_auto_refresh"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/pt_default_read"
            android:key="defaultToRead"
            android:summary="@string/ps_default_read"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/default_cover"
            android:key="defaultCover"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/use_default_cover"
            android:key="useDefaultCover"
            android:summary="@string/use_default_cover_s"
            android:defaultValue="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/other_setting"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.ui.widget.prefs.Preference
            android:title="UserAgent"
            android:key="userAgent"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/high_brush_title"
            android:key="highBrush"
            android:summary="@string/high_brush_summary"
            android:defaultValue="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/pre_download"
            android:key="preDownloadNum"
            android:summary="@string/pre_download_s"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/media_button_on_exit_title"
            android:key="mediaButtonOnExit"
            android:summary="@string/media_button_on_exit_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/auto_clear_expired"
            android:key="autoClearExpired"
            android:summary="@string/auto_clear_expired_summary"
            android:defaultValue="true"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/web_port_title"
            android:key="webPort"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/clear_cache"
            android:key="cleanCache"
            android:summary="@string/clear_cache_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/threads_num_title"
            android:key="threadCount"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/add_to_text_context_menu_t"
            android:key="process_text"
            android:summary="@string/add_to_text_context_menu_s"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/record_log"
            android:key="recordLog"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
