<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.ui.widget.prefs.Preference
        android:title="@string/contributors"
        android:key="contributors"
        android:summary="@string/contributors_summary"
        app:iconSpaceReserved="false"/>
    <io.legado.app.ui.widget.prefs.Preference
        android:title="@string/update_log"
        android:key="update_log"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"/>
    <io.legado.app.ui.widget.prefs.Preference
        android:title="@string/check_update"
        android:key="check_update"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"/>
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/contact"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/follow_official_account"
            android:key="gzGzh"
            android:summary="@string/official_account"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/join_qq_group"
            android:key="qq"
            android:summary="@string/click_to_apply"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/send_mail"
            android:key="mail"
            android:summary="kunfei.ge@gmail.com"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/git_hub"
            android:key="git"
            android:summary="@string/this_github_url"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="Discord"
            android:key="discord"
            android:summary="@string/discord_url"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="TG"
            android:key="tg"
            android:summary="@string/tg_url"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/source_rule_s"
            android:key="sourceRuleSummary"
            android:summary="@string/source_rule_url"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/home_page"
            android:key="home_page"
            android:summary="@string/home_page_url"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/other"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/crash_log"
            android:key="crashLog"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/license"
            android:key="license"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/disclaimer"
            android:key="disclaimer"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
