<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerAbove="false"
    app:allowDividerBelow="false">
    <io.legado.app.ui.widget.prefs.Preference
        android:icon="@drawable/ic_cfg_source"
        android:title="@string/book_source_manage"
        android:key="bookSourceManage"
        android:summary="@string/book_source_manage_desc"
        app:iconSpaceReserved="false"/>
    <io.legado.app.ui.widget.prefs.Preference
        android:icon="@drawable/ic_cfg_replace"
        android:title="@string/replace_purify"
        android:key="replaceManage"
        android:summary="@string/replace_purify_desc"
        app:iconSpaceReserved="false"/>
    <io.legado.app.ui.widget.prefs.NameListPreference
        android:icon="@drawable/ic_cfg_theme"
        android:entries="@array/theme_mode"
        android:title="@string/theme_mode"
        android:key="themeMode"
        android:summary="@string/theme_mode_desc"
        android:defaultValue="0"
        android:entryValues="@array/theme_mode_v"
        app:iconSpaceReserved="false"/>
    <io.legado.app.ui.widget.prefs.SwitchPreference
        android:icon="@drawable/ic_cfg_web"
        android:title="@string/web_service"
        android:key="webService"
        android:summary="@string/web_service_desc"
        android:defaultValue="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"/>
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/setting"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_cfg_backup"
            android:title="@string/backup_restore"
            android:key="web_dav_setting"
            android:summary="@string/web_dav_set_import_old"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_cfg_theme"
            android:title="@string/theme_setting"
            android:key="theme_setting"
            android:summary="@string/theme_setting_s"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_cfg_other"
            android:title="@string/other_setting"
            android:key="setting"
            android:summary="@string/other_setting_s"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/other"
        android:key="aboutCategory"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_history"
            android:title="@string/read_record"
            android:key="readRecord"
            android:summary="@string/read_record_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_cfg_donate"
            android:title="@string/donate"
            android:key="donate"
            android:summary="@string/donate_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_cfg_about"
            android:title="@string/about"
            android:key="about"
            android:summary="@string/about_summary"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
