<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:divider="@color/transparent"
    app:allowDividerAbove="false"
    app:allowDividerBelow="false">
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/setting"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_history"
            android:title="@string/read_record"
            android:key="readRecord"
            android:summary="@string/read_record_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_cfg_theme"
            android:title="@string/theme_setting"
            android:key="theme_setting"
            android:summary="@string/theme_setting_s"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_cfg_other"
            android:title="@string/other_setting"
            android:key="setting"
            android:summary="@string/other_setting_s"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.NameListPreference
            android:icon="@drawable/ic_cfg_theme"
            android:entries="@array/theme_mode"
            android:title="@string/theme_mode"
            android:key="themeMode"
            android:summary="@string/theme_mode_desc"
            android:defaultValue="0"
            android:entryValues="@array/theme_mode_v"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/other"
        android:key="aboutCategory"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_share"
            android:title="@string/share_app"
            android:key="share_app"
            android:summary="@string/donate_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_restore"
            android:title="@string/version"
            android:key="version"
            android:summary="@string/version_name"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_share"
            android:title="@string/disclaimer"
            android:key="disclaimer"
            android:summary="@string/disclaimer"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:icon="@drawable/ic_cfg_about"
            android:title="@string/about"
            android:key="about"
            android:summary="@string/about_summary"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
