<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/menu_group_on_line">
        <item
            android:icon="@drawable/ic_exchange"
            android:id="@+id/menu_change_source"
            android:title="@string/change_origin"
            app:showAsAction="always"/>
        <item
            android:icon="@drawable/ic_refresh_black_24dp"
            android:id="@+id/menu_refresh"
            android:title="@string/refresh"
            app:showAsAction="always"/>
        <item
            android:icon="@drawable/ic_download_line"
            android:id="@+id/menu_download"
            android:title="@string/offline_cache"
            app:showAsAction="always"/>
    </group>
    <group android:id="@+id/menu_group_text">
        <item
            android:icon="@drawable/ic_exchange"
            android:id="@+id/menu_toc_regex"
            android:visible="false"
            android:title="@string/txt_toc_regex"
            app:showAsAction="always"/>
    </group>
    <group android:id="@+id/menu_group_local">
        <item
            android:icon="@drawable/ic_translate"
            android:id="@+id/menu_set_charset"
            android:title="@string/set_charset"
            app:showAsAction="never"/>
    </group>
    <item
        android:id="@+id/menu_add_bookmark"
        android:title="@string/bookmark_add"
        app:showAsAction="never"/>
    <group android:id="@+id/menu_group_on_line_ns"/>
    <item
        android:id="@+id/menu_copy_text"
        android:title="@string/copy_text"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_page_anim"
        android:title="@string/book_page_anim"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_get_progress"
        android:title="@string/get_book_progress"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_reverse_content"
        android:title="@string/reverse_content"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_enable_replace"
        android:checked="true"
        android:title="@string/replace_rule_title"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_re_segment"
        android:checked="false"
        android:title="@string/re_segment"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_image_style"
        android:title="@string/image_style"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_update_toc"
        android:title="@string/update_toc"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_book_info"
        android:title="@string/book_info"
        app:showAsAction="never"/>
</menu>
