<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.ui.widget.prefs.PreferenceCategory
        android:title="@string/aloud_config"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <io.legado.app.ui.widget.prefs.SwitchPreference
            android:title="@string/read_aloud_by_page"
            android:key="readAloudByPage"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.ui.widget.prefs.Preference
            android:title="@string/speak_engine"
            android:key="speakEngine"
            android:summary="本地TTS"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
    </io.legado.app.ui.widget.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
